--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -18,6 +18,7 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
+target-path: "target"
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
@@ -31,6 +32,3 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   value_props:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
